# Compilers_Homework_2

./: CMakeLists.txt  CMakePresets.json
src/: dfa.cpp  dfa.h  main.cpp  mainwindow.cpp  mainwindow.h  nfa.cpp  nfa.h  utils.h
